# Anvil

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  docker-compose.yml
.cargo/: config.toml
.claude/: settings.json
.github/: RELEASE_NOTES_0.3.0.md  RELEASE_NOTES_0.3.1.md
.github/workflows/: bench-x86.yml  ci.yml  docs.yml  release.yml
crates/anvil/: Cargo.toml
crates/anvil-core/: Cargo.toml
crates/anvil-core/src/: app.rs  auth.rs  cache.rs  config.rs  container.rs  embedded.rs  error.rs  event.rs  facade.rs  lib.rs  mail.rs  middleware.rs  notification.rs  queue.rs  request.rs  response.rs  route.rs  schedule.rs  seeder.rs  server.rs  server_config.rs  session.rs  shutdown.rs  storage.rs  tracing_init.rs  validation.rs  view.rs
crates/anvil-core/src/auth/: mod.rs  recovery.rs  totp.rs
crates/anvil-core/tests/: embedded_assets.rs  embedded_assets_route.rs  facade_resolves_in_request.rs
crates/anvil-derive/: Cargo.toml
crates/anvil-derive/src/: form_request.rs  job.rs  lib.rs  migration.rs  seeder.rs
crates/anvil-dev/: Cargo.toml
crates/anvil-dev/src/: lib.rs
crates/anvil-test/: Cargo.toml
crates/anvil-test/src/: browser.rs  client.rs  datasets.rs  expect.rs  factory.rs  lib.rs
crates/anvil-test/tests/: assay_demo.rs
crates/anvil/src/: lib.rs
crates/bellows/: Cargo.toml
crates/bellows/src/: lib.rs
crates/bellows/tests/: lifecycle.rs
crates/boost/: Cargo.toml
crates/boost/src/: browser.rs  install.rs  lib.rs  log_capture.rs  protocol.rs  server.rs  tool.rs
crates/boost/src/tools/: browser_tools.rs  commands.rs  components.rs  config.rs  database.rs  docs.rs  info.rs  logs.rs  migrations.rs  mod.rs  models.rs  routes.rs
crates/cast/: Cargo.toml
crates/cast-core/: Cargo.toml
crates/cast-core/src/: column.rs  error.rs  lib.rs  migration.rs  model.rs  paginator.rs  pool.rs  query.rs  relation.rs  schema.rs
crates/cast-derive/: Cargo.toml
crates/cast-derive/src/: lib.rs  model.rs  relation.rs
crates/cast/src/: lib.rs
crates/forge/: Cargo.toml
crates/forge-codegen/: Cargo.toml
crates/forge-codegen/src/: compiler.rs  lib.rs  lower.rs  parser.rs
crates/forge/src/: escape.rs  helpers.rs  lib.rs  stack.rs  vite.rs
crates/reverb/: Cargo.toml
crates/reverb/src/: lib.rs
crates/smith/: Cargo.toml
crates/smith/src/: main.rs
crates/smith/src/commands/: auth.rs  bench.rs  boost.rs  db.rs  dev.rs  doctor.rs  fmt.rs  herd.rs  install.rs  lint.rs  make.rs  mcp.rs  migrate.rs  mod.rs  new.rs  package.rs  queue.rs  repl.rs  routes.rs  schedule.rs  self_update.rs  serve.rs  test.rs
crates/spark/: Cargo.toml
crates/spark-derive/: Cargo.toml
crates/spark-derive/src/: lib.rs
crates/spark/assets/: README.md
crates/spark/benches/: snapshot.rs  template.rs
crates/spark/src/: broadcast.rs  component.rs  crypto.rs  error.rs  http.rs  install.rs  lib.rs  middleware.rs  morph.rs  prelude.rs  registry.rs  render.rs  request.rs  response.rs  snapshot.rs  template.rs
crates/spark/tests/: concurrency.rs  csrf.rs  embedded_templates.rs  macros_e2e.rs  template_at_directives.rs
docs/: book.toml
docs/src/: README.md  SUMMARY.md  changelog.md  contributing.md
docs/src/auth/: policies.md  scaffold.md  sessions.md
docs/src/basics/: container.md  controllers.md  routing.md  templates.md  validation.md
docs/src/cast/: connections.md  migrations.md  models.md  queries.md  relationships.md  seeders.md
docs/src/cli/: smith.md
docs/src/getting-started/: dev-loop.md  first-app.md  first-feature.md  from-laravel.md  install.md  structure.md
docs/src/production/: benchmarks.md  config.md  deploy.md  observability.md
docs/src/subsystems/: broadcasting.md  cache.md  mail.md  queues.md  scheduler.md  spark.md  storage.md
examples/blog/: Cargo.toml
examples/blog/config/: anvil.toml
examples/blog/resources/views/layouts/: app.forge.html
examples/blog/resources/views/posts/: index.forge.html
examples/blog/resources/views/spark/: counter.forge.html
examples/blog/src/: lib.rs  main.rs
examples/blog/src/app/: migrations.rs  mod.rs  models.rs  policies.rs  requests.rs  schedule.rs  seeders.rs
examples/blog/src/app/spark/: Counter.rs  mod.rs
examples/blog/src/bootstrap/: app.rs
examples/blog/src/routes/: api.rs  middleware.rs  mod.rs  web.rs
examples/blog/tests/: db_integration.rs  smoke.rs  sqlite_integration.rs
examples/hot-demo/: Cargo.toml
examples/hot-demo-handlers/: Cargo.toml
examples/hot-demo-handlers/src/: lib.rs
examples/hot-demo/src/: main.rs
hooks/: pre-push
scripts/: compare-vs-octane.sh  install-anvil.sh  install.sh
tools/http-bench/: Cargo.toml  Dockerfile  docker-compose.yml
tools/http-bench/octane/: Dockerfile  docker-compose.yml
tools/http-bench/src/: main.rs
