[workspace]
resolver = "2"
members = [
    "crates/anvil",
    "crates/anvil-core",
    "crates/anvil-derive",
    "crates/anvil-test",
    "crates/cast",
    "crates/cast-core",
    "crates/cast-derive",
    "crates/forge",
    "crates/forge-codegen",
    "crates/reverb",
    "crates/smith",
    "examples/blog",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Anvilforge contributors"]
repository = "https://github.com/anvilforge/anvilforge"
homepage = "https://github.com/anvilforge/anvilforge"
rust-version = "1.85"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"
async-trait = "0.1"
pin-project-lite = "0.2"

# HTTP
axum = { version = "0.7", features = ["macros", "ws", "multipart"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors", "compression-gzip", "fs", "limit"] }
tower-sessions = "0.13"
hyper = "1.4"
http = "1.1"
http-body-util = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"

# Errors
thiserror = "1.0"
anyhow = "1.0"

# Database / ORM substrate
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid", "json"] }
sea-query = { version = "0.32", features = ["backend-postgres", "with-chrono", "with-uuid", "with-json"] }
sea-query-binder = { version = "0.7", features = ["sqlx-postgres", "with-chrono", "with-uuid", "with-json"] }

# Templates
askama = "0.12"

# Proc macros
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
darling = "0.20"

# Parsing
chumsky = "0.9"

# Tracing & logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# Config & env
dotenvy = "0.15"

# Hashing & crypto
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"

# Validation
garde = { version = "0.20", features = ["full"] }

# Storage
object_store = { version = "0.11", features = ["aws", "gcp"] }

# Cache
moka = { version = "0.12", features = ["future"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Mail
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder", "hostname"] }

# Cron / scheduler
cron = "0.12"
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
handlebars = "6.1"
inquire = "0.7"

# Faker
fake = { version = "3.0", features = ["derive", "chrono", "uuid"] }

# Utilities
uuid = { version = "1.10", features = ["v4", "v7", "serde"] }
once_cell = "1.20"
parking_lot = "0.12"
inventory = "0.3"
typetag = "0.2"
walkdir = "2.5"
notify = "6.1"
tokio-tungstenite = "0.24"
itertools = "0.13"
indexmap = { version = "2.6", features = ["serde"] }
regex = "1.11"
url = "2.5"
bytes = "1.7"
mime = "0.3"
mime_guess = "2.0"

# Internal crates — published names use `anvilforge-*` prefix.
# Workspace dep keys match published names; [lib].name fields preserve the old
# import names (`cast`, `forge`, `reverb`, etc.) so internal code is untouched.
anvilforge = { path = "crates/anvil", version = "0.1.0" }
anvilforge-core = { path = "crates/anvil-core", version = "0.1.0" }
anvilforge-derive = { path = "crates/anvil-derive", version = "0.1.0" }
anvilforge-test = { path = "crates/anvil-test", version = "0.1.0" }
anvilforge-cast = { path = "crates/cast", version = "0.1.0" }
anvilforge-cast-core = { path = "crates/cast-core", version = "0.1.0" }
anvilforge-cast-derive = { path = "crates/cast-derive", version = "0.1.0" }
anvilforge-templates = { path = "crates/forge", version = "0.1.0" }
anvilforge-templates-codegen = { path = "crates/forge-codegen", version = "0.1.0" }
anvilforge-broadcast = { path = "crates/reverb", version = "0.1.0" }

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
