[workspace]
resolver = "2"
members = [
    "crates/anvil",
    "crates/anvil-core",
    "crates/anvil-derive",
    "crates/anvil-test",
    "crates/cast",
    "crates/cast-core",
    "crates/cast-derive",
    "crates/forge",
    "crates/forge-codegen",
    "crates/anvil-dev",
    "crates/bellows",
    "crates/boost",
    "crates/smith",
    "crates/spark",
    "crates/spark-derive",
    "examples/blog",
    "examples/hot-demo",
    "examples/hot-demo-handlers",
    "tools/http-bench",
]

[workspace.package]
version = "0.3.6"
edition = "2021"
license = "MIT"
authors = ["Anvilforge contributors"]
repository = "https://github.com/anvilforge/anvilforge"
homepage = "https://github.com/anvilforge/anvilforge"
rust-version = "1.85"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"
async-trait = "0.1"
pin-project-lite = "0.2"

# HTTP
axum = { version = "0.7", features = ["macros", "ws", "multipart"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
# Direct rustls for the SNI cert resolver — version pinned to whatever
# axum-server 0.7 / tokio-rustls pulls transitively to avoid double-link.
rustls = "0.23"
# (rustls-acme 0.13 has rustls-version-mismatch build errors against this
#  workspace's pinned versions; the `[tls.acme]` schema is forward-compat
#  but the runtime is a follow-up PR with a focused dep-version pin.)
tower = { version = "0.5", features = ["util", "timeout"] }
tower-http = { version = "0.5", features = ["trace", "cors", "compression-gzip", "compression-br", "fs", "limit", "timeout", "set-header"] }
tower-sessions = "0.13"
hyper = "1.4"
http = "1.1"
http-body-util = "0.1"
rustls-pemfile = "2.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "gzip"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"

# Errors
thiserror = "1.0"
anyhow = "1.0"

# Database / ORM substrate
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "mysql", "sqlite", "macros", "chrono", "uuid", "json", "any"] }
sea-query = { version = "0.32", features = ["backend-postgres", "backend-mysql", "backend-sqlite", "with-chrono", "with-uuid", "with-json"] }
sea-query-binder = { version = "0.7", features = ["sqlx-postgres", "sqlx-mysql", "sqlx-sqlite", "with-chrono", "with-uuid", "with-json"] }

# Templates
askama = "0.12"
minijinja = { version = "2.0", features = ["loader"] }

# Proc macros
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
darling = "0.20"

# Parsing
chumsky = "0.9"

# Tracing & logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# Config & env
dotenvy = "0.15"
toml = "0.8"
ipnet = { version = "2.9", features = ["serde"] }

# Hashing & crypto
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
aes-gcm = "0.10"

# Validation
garde = { version = "0.20", features = ["full"] }

# Storage
object_store = { version = "0.11", features = ["aws", "gcp"] }

# Cache
moka = { version = "0.12", features = ["future", "sync"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Mail
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder", "hostname"] }

# Cron / scheduler
cron = "0.12"
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
handlebars = "6.1"
inquire = "0.7"

# Faker
fake = { version = "3.0", features = ["derive", "chrono", "uuid"] }

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Browser automation (Playwright-equivalent via Chrome DevTools Protocol).
chromiumoxide = { version = "0.7", default-features = false, features = ["tokio-runtime"] }

# Utilities
uuid = { version = "1.10", features = ["v4", "v7", "serde"] }
once_cell = "1.20"
parking_lot = "0.12"
inventory = "0.3"
typetag = "0.2"
walkdir = "2.5"
notify = "6.1"
tokio-tungstenite = "0.24"
itertools = "0.13"
indexmap = { version = "2.6", features = ["serde"] }
regex = "1.11"
paste = "1.0"
flate2 = "1.0"

# Hot-reload of user code via dylib swap. Closes most of the dev-loop gap
# vs Laravel for the "edit handler → see it run" cycle.
hot-lib-reloader = "0.7"
libloading = "0.8"

url = "2.5"
bytes = "1.7"
mime = "0.3"
mime_guess = "2.0"

# Compile-time embedding of `public/` assets into the binary so apps can ship
# as a single executable. Used by `anvilforge-core`'s `embed-assets` feature.
rust-embed = { version = "8.5", default-features = false, features = ["interpolate-folder-path"] }

# Internal crates — published names use `anvilforge-*` prefix.
# Workspace dep keys match published names; [lib].name fields preserve the old
# import names (`cast`, `forge`, `reverb`, etc.) so internal code is untouched.
anvilforge = { path = "crates/anvil", version = "0.3.6" }
anvilforge-core = { path = "crates/anvil-core", version = "0.3.6" }
anvilforge-derive = { path = "crates/anvil-derive", version = "0.3.6" }
anvilforge-test = { path = "crates/anvil-test", version = "0.3.6" }
anvilforge-cast = { path = "crates/cast", version = "0.3.6" }
anvilforge-cast-core = { path = "crates/cast-core", version = "0.3.6" }
anvilforge-cast-derive = { path = "crates/cast-derive", version = "0.3.6" }
anvilforge-templates = { path = "crates/forge", version = "0.3.6" }
anvilforge-templates-codegen = { path = "crates/forge-codegen", version = "0.3.6" }
anvilforge-bellows = { path = "crates/bellows", version = "0.3.6" }
anvilforge-boost = { path = "crates/boost", version = "0.3.6" }
anvilforge-dev = { path = "crates/anvil-dev", version = "0.3.6" }
anvilforge-spark = { path = "crates/spark", version = "0.3.6" }
anvilforge-spark-derive = { path = "crates/spark-derive", version = "0.3.6" }

[profile.dev]
opt-level = 0
# Line-tables-only keeps backtraces useful but cuts debug-info size + link time
# roughly in half. Combined with split-debuginfo = "unpacked", the linker
# doesn't have to copy a giant debug blob into every binary.
debug = "line-tables-only"
split-debuginfo = "unpacked"
incremental = true
# More codegen units = more parallelism inside a single crate compile.
codegen-units = 256

# Dependencies are opaque to your dev loop — cargo caches them and you never
# recompile them on edits. Drop debug info for them entirely; saves a lot of
# linker time without affecting backtraces in your own code.
[profile.dev.package."*"]
opt-level = 0
debug = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
