[package]
name = "anvil-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Anvil core: routing, middleware, container, request/response, error type, runtime cross-cutting concerns."

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tower-sessions = { workspace = true }
hyper = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
pin-project-lite = { workspace = true }
sqlx = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
base64 = { workspace = true }
garde = { workspace = true }
moka = { workspace = true }
redis = { workspace = true }
object_store = { workspace = true }
lettre = { workspace = true }
cron = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
inventory = { workspace = true }
typetag = { workspace = true }
url = { workspace = true }
bytes = { workspace = true }
mime = { workspace = true }
regex = { workspace = true }
indexmap = { workspace = true }
forge = { workspace = true }
cast-core = { workspace = true }
askama = { workspace = true }
