[package]
name = "anvilforge-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Proc macros for Anvilforge: FormRequest, Job, Migration, Listener."
readme = "../../README.md"
keywords = ["web", "framework", "macros", "anvilforge"]
categories = ["web-programming", "rust-patterns"]

[lib]
name = "anvil_derive"
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
darling = { workspace = true }
