[package]
name = "anvilforge-dev"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Anvilforge dev-mode hot-reload runtime — typed ABI + launcher that hot-swaps user handlers without restarting the framework process."
readme = "../../README.md"
keywords = ["hot-reload", "dev", "framework", "anvilforge"]
categories = ["development-tools", "web-programming"]

[lib]
name = "anvil_dev"

[dependencies]
anvilforge-core = { workspace = true }

tokio = { workspace = true }
axum = { workspace = true }
http = { workspace = true }
futures = { workspace = true }
hot-lib-reloader = { workspace = true }
libloading = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
