[package]
name = "anvilforge-test"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Anvilforge test utilities: HTTP test client, factories, fakes for mail/queue/notification."
readme = "../../README.md"
keywords = ["test", "testing", "web", "anvilforge"]
categories = ["development-tools::testing", "web-programming"]

[lib]
name = "anvil_test"

[dependencies]
anvilforge-core = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
hyper = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
fake = { workspace = true }
parking_lot = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
