[package]
name = "anvilforge-test"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Anvilforge test utilities: HTTP test client, factories, fakes for mail/queue/notification."
readme = "../../README.md"
keywords = ["test", "testing", "web", "anvilforge"]
categories = ["development-tools::testing", "web-programming"]

[lib]
name = "anvil_test"

[dependencies]
anvilforge-core = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
hyper = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
regex = { workspace = true }
sqlx = { workspace = true }
fake = { workspace = true }
parking_lot = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
once_cell = { workspace = true }
paste = { workspace = true }
chromiumoxide = { workspace = true, optional = true }

[features]
default = []
# Enable `assay::browser` — drives a real headless Chromium for end-to-end
# browser tests. Requires Chrome/Chromium on the host. Off by default to keep
# the dev-dep tree light.
browser = ["chromiumoxide"]
