[package]
name = "anvilforge"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Anvilforge — Laravel-equivalent Rust web framework. Forge web apps with Eloquent-shape ORM, Blade-style templates, queues, mail, and more."
readme = "../../README.md"
keywords = ["web", "framework", "laravel", "axum", "rust"]
categories = ["web-programming", "web-programming::http-server"]

[lib]
name = "anvilforge"

[dependencies]
anvilforge-core = { workspace = true }
anvilforge-derive = { workspace = true }
anvilforge-cast = { workspace = true }
anvilforge-templates = { workspace = true }
anvilforge-broadcast = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
