[package]
name = "anvilforge-bellows"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Bellows — Anvilforge's real-time broadcaster. WebSocket server with Pusher-compatible wire protocol, breathes events out to connected clients."
readme = "../../README.md"
keywords = ["websocket", "broadcast", "real-time", "anvilforge", "bellows"]
categories = ["web-programming::websocket", "web-programming"]

[lib]
name = "bellows"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
base64 = { workspace = true }
indexmap = { workspace = true }
