[package]
name = "anvilforge-boost"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Boost — Anvilforge's AI-agent toolkit. Embedded MCP server with framework introspection tools (routes, models, components, schema, queries, logs)."
readme = "../../README.md"
keywords = ["mcp", "ai", "agent", "introspection", "anvilforge"]
categories = ["development-tools", "web-programming"]

[lib]
name = "boost"

[dependencies]
anvilforge-core = { workspace = true }
anvilforge-cast-core = { workspace = true }
anvilforge-spark = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
once_cell = { workspace = true }
walkdir = { workspace = true }
indexmap = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
base64 = { workspace = true }
chromiumoxide = { workspace = true }
