[package]
name = "cast-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Cast ORM core: Model trait, QueryBuilder, Column, Relation, Schema, migrations."

[dependencies]
tokio = { workspace = true }
sqlx = { workspace = true }
sea-query = { workspace = true }
sea-query-binder = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
indexmap = { workspace = true }
inventory = { workspace = true }
