[package]
name = "anvilforge-cast-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Cast ORM core for Anvilforge: Model trait, QueryBuilder, Column, Relation, Schema, migrations."
readme = "../../README.md"
keywords = ["orm", "database", "sqlx", "postgres", "anvilforge"]
categories = ["database", "web-programming"]

[lib]
name = "cast_core"

[dependencies]
tokio = { workspace = true }
sqlx = { workspace = true }
sea-query = { workspace = true }
sea-query-binder = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
indexmap = { workspace = true }
inventory = { workspace = true }
