[package]
name = "cast-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Cast ORM derive macros: #[derive(Model)], #[has_many], #[belongs_to], #[scope]."

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
darling = { workspace = true }
