[package]
name = "cast"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Cast ORM facade — re-exports cast-core and cast-derive."

[dependencies]
cast-core = { workspace = true }
cast-derive = { workspace = true }
sqlx = { workspace = true }
sea-query = { workspace = true }
