[package]
name = "anvilforge-cast"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Cast — Eloquent-shaped ORM for Anvilforge. Facade crate."
readme = "../../README.md"
keywords = ["orm", "eloquent", "sqlx", "postgres", "anvilforge"]
categories = ["database", "web-programming"]

[lib]
name = "cast"

[dependencies]
anvilforge-cast-core = { workspace = true }
anvilforge-cast-derive = { workspace = true }
sqlx = { workspace = true }
sea-query = { workspace = true }
