[package]
name = "forge"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Forge template runtime: StackBuffer for @push/@stack, @vite asset helper, escape primitives."

[dependencies]
askama = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
indexmap = { workspace = true }
once_cell = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
