[package]
name = "anvilforge-templates"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Forge template runtime for Anvilforge: StackBuffer for @push/@stack, @vite asset helper, escape primitives."
readme = "../../README.md"
keywords = ["template", "blade", "askama", "anvilforge", "forge"]
categories = ["template-engine", "web-programming"]

[lib]
name = "forge"

[dependencies]
askama = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
indexmap = { workspace = true }
once_cell = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
