[package]
name = "reverb"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Reverb — websocket server with channel auth, presence, and Pusher-compatible wire protocol."

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
base64 = { workspace = true }
indexmap = { workspace = true }
