[package]
name = "anvilforge-broadcast"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Reverb — Anvilforge's websocket server with Pusher-compatible wire protocol."
readme = "../../README.md"
keywords = ["websocket", "broadcast", "pusher", "anvilforge", "reverb"]
categories = ["web-programming::websocket", "web-programming"]

[lib]
name = "reverb"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
base64 = { workspace = true }
indexmap = { workspace = true }
