[package]
name = "anvilforge-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Smith — Anvilforge's CLI (Artisan equivalent). Scaffolding, migrations, serve, queue:work, schedule:run, test."
readme = "../../README.md"
keywords = ["web", "framework", "cli", "scaffold", "anvilforge"]
categories = ["command-line-utilities", "web-programming", "development-tools"]

[[bin]]
name = "anvil"
path = "src/main.rs"

# Binary distribution: when GitHub releases attach pre-built tarballs to a tag
# matching this crate's version, `cargo binstall anvilforge-cli` downloads the
# binary instead of compiling from source (saves ~10 minutes on a cold install).
# See .github/workflows/release.yml for the publishing side.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/anvilforge-cli-v{ version }-{ target }.{ archive-format }"
pkg-fmt = "tgz"
bin-dir = "anvilforge-cli-v{ version }-{ target }/{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[dependencies]
clap = { workspace = true }
handlebars = { workspace = true }
inquire = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
walkdir = { workspace = true }
notify = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
toml = { workspace = true }
flate2 = { workspace = true }
tar = "0.4"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
