[package]
name = "blog"
version.workspace = true
edition.workspace = true
description = "Anvil POC example app — exercises every subsystem end-to-end."

[[bin]]
name = "blog"
path = "src/main.rs"

[dependencies]
anvil = { workspace = true }
anvil-core = { workspace = true }
anvil-derive = { workspace = true }
cast = { workspace = true }
forge = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
garde = { workspace = true }

[lib]
path = "src/lib.rs"

[dev-dependencies]
anvil-test = { workspace = true }
forge-codegen = { workspace = true }
