[package]
name = "blog"
version.workspace = true
edition.workspace = true
description = "Anvilforge POC example app — exercises every subsystem end-to-end."

[[bin]]
name = "blog"
path = "src/main.rs"

[dependencies]
anvilforge = { workspace = true }
anvilforge-core = { workspace = true }
anvilforge-derive = { workspace = true }
anvilforge-cast = { workspace = true }
anvilforge-templates = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
garde = { workspace = true }

[lib]
path = "src/lib.rs"

[dev-dependencies]
anvilforge-test = { workspace = true }
anvilforge-templates-codegen = { workspace = true }
