[package]
name = "anvilforge-http-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "In-workspace HTTP load tester for Anvilforge — boots a minimal app and hits it with N concurrent workers for D seconds, reports RPS + p50/p95/p99 latency."
publish = false

[[bin]]
name = "anvil-bench"
path = "src/main.rs"

[dependencies]
anvilforge-core = { workspace = true }
anvilforge-cast-core = { workspace = true }
anvilforge-templates-codegen = { workspace = true }
anvilforge-spark = { workspace = true }
anvilforge-spark-derive = { workspace = true }

tokio = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
minijinja = { workspace = true }
sqlx = { workspace = true }
